Fix for missing styles in the function name headers

--- a/website/docs/src/styles/app.scss
+++ b/website/docs/src/styles/app.scss
@@ -115,7 +115,8 @@ body {
 
     // API Function names
     &.page-luigi-core-api,
-    &.page-luigi-client-api {
+    &.page-luigi-client-api,
+    &.page-luigi-element-api {
         h4 {
             margin-top: 35px;
             display: inline-block;
