--- a/core-modular/dev-tools/templates/simple/microfrontend.html
+++ b/core-modular/dev-tools/templates/simple/microfrontend.html
@@ -22,6 +22,7 @@
     <div>
       <h1>Luigi Simple Development Template</h1>
       <p>Some content</p>
+      <button onclick="LuigiClient.linkManager().navigate('/home')">nav to home</button>
     </div>
     <script>
       let div = document.createElement('div');
