--- a/website/docs/src/luigi-config/styles/index.scss
+++ b/website/docs/src/luigi-config/styles/index.scss
@@ -1,3 +1,4 @@
+@use './search' as *;
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800|Quicksand:500&display=swap');
 
 // Icon font
@@ -609,6 +610,3 @@ $side-nav-width-mobile: 260px;
     }
   }
 }
-
-
-@import './search';
