--- a/test/e2e-client-api-test-app/public/views/container/wc.html
+++ b/test/e2e-client-api-test-app/public/views/container/wc.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <script type="module">
@@ -52,13 +52,16 @@
           console.log(event.detail);
           alert(event.detail.text);
         });
-        luigiContainer.addEventListener(MFEventID.GO_BACK_REQUEST, event => {
-          console.log(event.detail)
+        luigiContainer.addEventListener(MFEventID.GO_BACK_REQUEST, (event) => {
+          console.log(event.detail);
           alert(event.detail.goBackValue);
         });
-        luigiContainer.addEventListener(MFEventID.UPDATE_TOP_NAVIGATION_REQUEST, event => {
-          alert("UPDATE_TOP_NAVIGATION_REQUEST event received");
-        });
+        luigiContainer.addEventListener(
+          MFEventID.UPDATE_TOP_NAVIGATION_REQUEST,
+          (event) => {
+            alert('UPDATE_TOP_NAVIGATION_REQUEST event received');
+          },
+        );
         luigiContainer.addEventListener(
           MFEventID.SHOW_CONFIRMATION_MODAL_REQUEST,
           (event) => {
