Fixes styling issues in the docs

--- a/core/src/styles/_mixins.scss
+++ b/core/src/styles/_mixins.scss
@@ -24,3 +24,13 @@
     );
   }
 }
+
+@mixin small-button() {
+  height: 36px;
+  margin: 0;
+
+  > i {
+    line-height: 16px;
+    margin: 0;
+  }
+}
