--- a/website/docs/src/luigi-config/styles/index.scss
+++ b/website/docs/src/luigi-config/styles/index.scss
@@ -114,7 +114,13 @@ $side-nav-width-mobile: 260px;
     z-index: 2;
 
     span {
-      font-weight: 600;
+      font-weight: 600;    
+      margin-left: 1rem;
+      margin-right: .95rem;
+    }
+
+    [title=Blog] span {
+      margin-right: 1.2rem;
     }
 
     .fd-shellbar__title {
@@ -127,7 +133,7 @@ $side-nav-width-mobile: 260px;
 
     @media screen and (min-width: 1024px) {
       height: $height-shellbar;
-      padding: 4px 32px !important;
+      padding: 0px 26px 0 17px!important;
     }
   }
 
@@ -281,7 +287,8 @@ $side-nav-width-mobile: 260px;
 
       .fd-top-nav__icon {
         line-height: 0;
-        margin-top: -2.5rem;
+        margin-top: -3.25rem;
+        margin-right: 0;
 
         &:before {
           margin-top: 0 !important;
@@ -326,7 +333,7 @@ $side-nav-width-mobile: 260px;
         margin-bottom: -41px;
 
         span:not(.fd-top-nav__icon) {
-          padding-bottom: 37px;
+          padding-bottom: 42px;
         }
 
         .fd-top-nav__icon {
@@ -420,7 +427,7 @@ $side-nav-width-mobile: 260px;
     font-size: 24px;
     line-height: 1;
     transition: color .3s ease;
-    color: white;
+    color: white!important;
 
     &:not(.sap-icon--search):before {
       font-family: 'icon-font' !important;
