--- a/website/docs/src/luigi-config/styles/index.scss
+++ b/website/docs/src/luigi-config/styles/index.scss
@@ -318,8 +318,9 @@ $side-nav-width-mobile: 260px;
         margin: 0;
 
         > i {
-          line-height: 16px;
+          line-height: 12px;
           margin: 0;
+          color: white;
         }
 
         &:focus::after,
