--- a/website/docs/src/luigi-config/styles/index.scss
+++ b/website/docs/src/luigi-config/styles/index.scss
@@ -115,8 +115,13 @@ $side-nav-width-mobile: 260px;
 
     span {
       font-weight: 600;    
-      margin-left: 1rem;
       margin-right: .95rem;
+    }
+
+    :not(.fd-shellbar__action--mobile) {
+      span {
+        margin-left: 1rem; 
+      }
     }
 
     [title=Blog] {
@@ -262,6 +267,12 @@ $side-nav-width-mobile: 260px;
       }
     }
 
+    button.fd-button.fd-shellbar__button {
+      &:not(.lui-burger):focus::after {
+        inset: -2px 0 auto 0;
+      }
+    }
+
     .fd-button.fd-shellbar__button {
       border: none;
       border-radius: 0;
@@ -289,7 +300,7 @@ $side-nav-width-mobile: 260px;
 
       .fd-top-nav__icon {
         line-height: 0;
-        margin-top: -3.25rem;
+        margin-top: -2.25rem;
         margin-right: 0;
 
         &:before {
@@ -309,7 +320,7 @@ $side-nav-width-mobile: 260px;
 
       &:not(.lui-burger):focus::after {
         height: 34px;
-        inset: -2px 0 auto 0;
+        inset: -2px -6px auto 10px;
       }
 
       &:has(.sap-icon--search),
