--- a/core/src/app.scss
+++ b/core/src/app.scss
@@ -35,16 +35,43 @@
 }
 
 @font-face {
-  font-family: '72';
-  src: url('@sap-theming/theming-base-content/content/Base/baseLib/baseTheme/fonts/72-Regular-full.woff2') format('woff2');
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
   font-family: '72black';
   src: url('@sap-theming/theming-base-content/content/Base/baseLib/baseTheme/fonts/72-Black-full.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
 }
 
+@font-face {
+  font-family: '72black';
+  src: url('@sap-theming/theming-base-content/content/Base/baseLib/baseTheme/fonts/72-Black-full.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: '72-Semibold';
+  src: url('@sap-theming/theming-base-content/content/Base/baseLib/baseTheme/fonts/72-Semibold.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: '72-Semibold';
+  src: url('@sap-theming/theming-base-content/content/Base/baseLib/baseTheme/fonts/72-Semibold.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: '72-SemiboldDuplex';
+  src: url('@sap-theming/theming-base-content/content/Base/baseLib/baseTheme/fonts/72-SemiboldDuplex.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: '72-SemiboldDuplex';
+  src: url('@sap-theming/theming-base-content/content/Base/baseLib/baseTheme/fonts/72-SemiboldDuplex.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
